# BDCodingAssignmentCPP_XMLValidator

./: CMakeLists.txt  CMakeSettings.json  HowToBuild.md  README.md  run_tests_bat
src/: checker.cpp  main.cpp  simple_validator.cpp  simple_validator.hpp
tests/: CMakeLists.txt  test_main.cpp  test_simple_validator.cpp
